// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders correctly when value < 0 1`] = `
<DocumentFragment>
  .css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-1wzmild-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="-250"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-1wzmild-StyledFilled et8xa2y0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders correctly when value > 100 1`] = `
<DocumentFragment>
  .css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-sysp65-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="250"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-sysp65-StyledFilled et8xa2y0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders info 1`] = `
<DocumentFragment>
  .css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-exx6v2-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #3f6ed8;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-exx6v2-StyledFilled et8xa2y0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders primary 1`] = `
<DocumentFragment>
  .css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-1qx9yj5-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-1qx9yj5-StyledFilled et8xa2y0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders progression 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-9xmuru-StyledProgress {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-9xmuru-StyledProgress et8xa2y1"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders success 1`] = `
<DocumentFragment>
  .css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-bqgdj4-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #22c8a2;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-bqgdj4-StyledFilled et8xa2y0"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders warning 1`] = `
<DocumentFragment>
  .css-1ak1a74-StyledProgressContainer {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 4px;
  background-color: #f6f6f8;
}

.css-1mrz2jf-StyledFilled {
  border-radius: 4px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #ff8c69;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="css-1ak1a74-StyledProgressContainer et8xa2y2"
    role="progressbar"
  >
    <div
      class="css-1mrz2jf-StyledFilled et8xa2y0"
    />
  </div>
</DocumentFragment>
`;
